<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


            <EditText
                android:id="@+id/LoginUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:layout_marginTop="200dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:hint="@string/TelPrompt"
                android:inputType="text"
                android:maxLength="20"
                android:paddingLeft="20dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/LoginPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:hint="@string/PasswordPrompt"
                android:inputType="textPassword"
                android:maxLength="20"
                android:paddingLeft="20dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:textSize="18sp" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="90dp"
                android:paddingLeft="130dp"
                android:paddingRight="130dp">

                <Button
                    android:id="@+id/LoginBtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/shape_round_corner"
                    android:text="@string/LoginBtnText"
                    android:textColor="#FFFFFFFF"
                    android:textSize="18sp"
                    android:onClick="login"
                    />

            </LinearLayout>

            <TextView
                android:id="@+id/GoRegisterBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/SignUpPrompt"
                android:padding="25dp"
                android:textSize="18sp"
                android:onClick="goToReg"/>



    </LinearLayout>
</RelativeLayout>