<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <EditText
            android:id="@+id/CarPlate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:layout_marginTop="170dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:hint="@string/CarPlateText"
            android:inputType="text"
            android:maxLength="20"
            android:paddingLeft="20dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="90dp"
            android:paddingLeft="130dp"
            android:paddingRight="130dp">

            <Button
                android:id="@+id/RegisterCar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_round_corner"
                android:text="@string/RegCarBtnText"
                android:textColor="#FFFFFFFF"
                android:textSize="18sp"

                />

        </LinearLayout>


    </LinearLayout>
</RelativeLayout>