<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CarManagementActivity"
    android:id="@+id/carFrame">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:textSize="30sp"
        android:id="@+id/NoCarMsg"/>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/CarContainer"
        android:layout_gravity="center_horizontal">

    </androidx.recyclerview.widget.RecyclerView>
    <!--<ScrollView-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:id="@+id/OrderContainer">-->

    <!--</ScrollView>-->
    <Button
        android:id="@+id/addCarBtn"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="0dp"
        android:layout_gravity="bottom"
        android:background="#5054544A"
        android:text="+ Add Car"
        android:textSize="20dp" />
</FrameLayout>