<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <EditText
            android:id="@+id/RegisterUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:layout_marginTop="110dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:hint="@string/UerNamePrompt"
            android:inputType="text"
            android:maxLength="20"
            android:paddingLeft="20dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/RegisterPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="30dp"
            android:hint="@string/PasswordPrompt"
            android:inputType="textPassword"
            android:maxLength="20"
            android:paddingLeft="20dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/RegisterTel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="30dp"
            android:hint="@string/TelPrompt"
            android:inputType="text"
            android:maxLength="20"
            android:paddingLeft="20dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:textSize="18sp" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/RegisterOpt"
            android:layout_width="273dp"
            android:layout_height="50dp"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="30dp"
            android:hint="@string/OptPrompt"
            android:inputType="text"
            android:maxLength="6"
            android:paddingLeft="20dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:textSize="18sp" />

        <Button
            android:id="@+id/GetOptNum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:background="@drawable/shape_round_corner"
            android:onClick="Wait"
            android:text="@string/GetCodeText"
            android:textColor="#FFFFFFFF"
            android:textSize="18sp" />

    </LinearLayout>
        <TextView
            android:id="@+id/gendertext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:layout_marginLeft="30dp"
            android:text="Gender"
            android:textSize="18sp"/>
        <RadioGroup
            android:id="@+id/rg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal">
            <RadioButton
                android:id="@+id/male"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="Male" />
            <RadioButton
                android:id="@+id/femle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="Female"/>
        </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="90dp"
            android:paddingLeft="130dp"
            android:paddingRight="130dp">

            <Button
                android:id="@+id/RegisterBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_round_corner"
                android:text="@string/RegBtnText"
                android:textColor="#FFFFFFFF"
                android:textSize="18sp"
                android:onClick="register"
                />

        </LinearLayout>

        <TextView
            android:id="@+id/GoLogBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/BackSignIn"
            android:padding="25dp"
            android:textSize="18sp"
            android:onClick="goToLogin"/>



    </LinearLayout>
</RelativeLayout>