<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <ImageView
            android:layout_width="171dp"
            android:layout_height="226dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="80dp"
            android:layout_marginBottom="55dp"
            android:background="@drawable/logo_p" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="90dp"
            android:paddingLeft="130dp"
            android:paddingRight="130dp">

            <Button
                android:id="@+id/GoLogBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_round_corner"
                android:text="@string/LoginBtnText"
                android:textColor="#FFFFFFFF"
                android:textSize="18sp"
                android:onClick="goToLogin"/>
        </LinearLayout>

        <TextView
            android:id="@+id/GoRegisterBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:padding="25dp"
            android:text="@string/SignUpPrompt"
            android:textSize="18sp"
            android:onClick="goToReg"/>


    </LinearLayout>
</RelativeLayout>